--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,124 +1,127 @@
-html, body{
-    height: 100%;
+html,
+body {
+  height: 100%;
 }
-body{
-    background: url(./images/image.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    overflow-y:hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+body {
+  background: url(./images/image.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  overflow-y: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.osnova{
-    width: 60vw;
-    height: 80vh;
-    background-color: rgba(18, 63, 60, 0.7);
-    border-radius: 3vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+.osnova {
+  width: 60vw;
+  height: 80vh;
+  background-color: rgba(18, 63, 60, 0.7);
+  border-radius: 3vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
-.loginPanel{
-    width: 38vw;
-    height: 80vh;
-    background-color: rgba(18, 63, 60, 0.7);
-    border-radius: 3vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    padding-top: 5vh;
+.loginPanel {
+  width: 38vw;
+  height: 80vh;
+  background-color: rgba(18, 63, 60, 0.7);
+  border-radius: 3vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 5vh;
+  margin-bottom: 2vh;
 }
-.loginPanel input{
-    width: 30vw;
-    height: 10vh;
+.loginPanel input {
+  width: 30vw;
+  height: 10vh;
 }
-.loginPanel button{
-    margin-top: 4vh;
-    margin-bottom: 2vh;
+.loginPanel button {
+  margin-top: 4vh;
+  margin-bottom: 2vh;
 }
-p{
-    width: 95%;
-    padding: 2vh;
-    padding-top: 1vh;
-    font-size: 1.5vw;
-    color: #CBE894;
-    font-family: "Inder";
-    height: 30vh;
-    text-align: left;
+p {
+  width: 95%;
+  padding: 2vh;
+  padding-top: 1vh;
+  font-size: 1.5vw;
+  color: #cbe894;
+  font-family: "Inder";
+  height: 30vh;
+  text-align: left;
 }
-.inputer{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 3vh;
+.inputer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 3vh;
 }
-input{
-    font-family: "Jaro", sans-serif;
-    background-color: rgba(22, 37, 44, 0.7);
-    border: none;
-    font-size: 2vw;
-    color: #CBE894;
-    border-radius: 1.5vw;
-    height:8vh;
-    width:47vw;
-    padding-left: 1.5vw;
+input {
+  font-family: "Jaro", sans-serif;
+  background-color: rgba(22, 37, 44, 0.7);
+  border: none;
+  font-size: 2vw;
+  color: #cbe894;
+  border-radius: 1.5vw;
+  height: 8vh;
+  width: 47vw;
+  padding-left: 1.5vw;
 }
-input:focus{
-    outline: none;
-    box-shadow: none;
+input:focus {
+  outline: none;
+  box-shadow: none;
 }
 input::-webkit-input-placeholder {
-    color: #CBE894;
-    opacity: 0.5;
+  color: #cbe894;
+  opacity: 0.5;
 }
-button{
-    border-radius: 1.5vw;
-    width:10vw;
+button {
+  border-radius: 1.5vw;
+  width: 10vw;
+  height: 8vh;
+  margin-left: 0.5vw;
+  background-color: rgba(203, 232, 148, 0.7);
+  border: none;
+  color: white;
+  font-size: 2vw;
+}
+@media screen and (max-width: 700px) {
+  .loginPanel {
+    width: 98vw;
+    border-radius: 10vw;
+    margin-bottom: 3vh;
+  }
+  .osnova {
+    width: 95vw;
+    height: 95vh;
+    border-radius: 7vw;
+  }
+  p {
+    font-size: 2vh;
+  }
+  button {
+    border-radius: 3vh;
+    margin-left: 2vw;
+    width: 13vw;
+    height: 7vh;
+    font-size: 2vh;
+  }
+  input {
+    height: 10vh;
+    width: 75vw;
+    font-size: 4vh;
+    padding-left: 2vw;
+    border-radius: 3vh;
+  }
+  .loginPanel input {
+    width: 80vw;
+    height: 10vh;
+  }
+  .loginPanel button {
+    font-size: 4vw;
+    width: 25vw;
     height: 8vh;
-    margin-left: 0.5vw;
-    background-color: rgba(203, 232, 148, 0.7);
-    border:none;
-    color:white;
-    font-size: 2vw;
-}
-@media screen and (max-width:700px){
-    .loginPanel{
-        width: 98vw;
-        border-radius: 10vw;
-    }
-    .osnova{
-        width: 95vw;
-        height: 95vh;
-        border-radius: 7vw;
-    }
-    p{
-        font-size: 2vh;
-    }
-    button{
-        border-radius: 3vh;
-        margin-left: 2vw;
-        width:13vw;
-        height: 7vh;
-        font-size: 2vh;
-    }
-    input{
-        height: 10vh;
-        width: 75vw;
-        font-size: 4vh;
-        padding-left: 2vw;
-        border-radius: 3vh;
-    }
-    .loginPanel input{
-        width: 80vw;
-        height: 10vh;
-    }
-    .loginPanel button{
-        font-size: 4vw;
-        width: 25vw;
-        height: 8vh;
-    }
+  }
 }
